--- a/languages/en.json
+++ b/languages/en.json
@@ -1,125 +1,80 @@
 {
-  "header": {
-    "home": "Home",
-    "about": "About Me",
-    "experience": "Experience",
-    "skills": "Skills",
-    "portfolio": "My Portfolio",
-    "contact": "Contact"
-  },
+  "nav_home": "Home",
+  "nav_about": "About",
+  "nav_experience": "Experience",
+  "nav_skills": "Skills",
+  "nav_portfolio": "Portfolio",
+  "nav_certifications": "Certifications",
+  "nav_contact": "Contact",
   
-  "home": {
-    "greeting": "Hello",
-    "title": "I'm Victor",
-    "role": "Software Developer",
-    "cta": {
-      "contact": "Get in touch",
-      "download": "Download CV"
-    }
-  },
+  "home_greeting": "Hello",
+  "home_title": "I'm Victor",
+  "home_subtitle": "Guilarte",
+  "home_role": "Software Developer",
+  "home_cta_contact": "Get in touch",
+  "home_cta_download": "Download CV",
   
-  "about": {
-    "title": "About Me",
-    "subtitle": "Hi, I'm Here To Help Your Next Project",
-    "description": "I am a Full-Stack developer with .Net, having 2 years of professional experience since 2023. I have participated in the design, development, and migration of enterprise systems, specializing in web financial applications, applying agile methodologies (Scrum) to ensure the rapid and efficient delivery of software solutions. I possess skills to solve complex problems and effectively self-manage during independent projects, as well as collaborate efficiently as part of a team.",
-    "cta": "Contact Me"
-  },
+  "about_title": "About Me",
+  "about_subtitle": "Hi, I'm Here To Help Your Next Project",
+  "about_description": "I am a Full-Stack developer with .Net, having 2 years of professional experience since 2023...",
+  "about_cta": "Contact Me",
   
-  "experience": {
-    "title": "My Experience",
-    "subtitle": "Better Code, Better Experiences",
-    "current_role": {
-      "title": "Software Developer at Sifizsoft S.A",
-      "period": "May, 2023 - Present",
-      "responsibilities": [
-        "Participated in the migration of the Enterprise Financial System to a web application, increasing system efficiency by 25%.",
-        "Developed complex features and performed automated testing, ensuring software quality at 98%.",
-        "Programmed updates based on detailed design specifications, improving system stability by 15%.",
-        "Worked independently and as an enthusiastic team member, collaborating under a DevOps approach to ensure continuous delivery and scalability of applications.",
-        "Provided support and maintenance for incidents in APIs, web, and mobile applications.",
-        "Programmed new views and functionalities in mobile applications."
-      ]
-    }
-  },
+  "experience_title": "My Experience",
+  "experience_subtitle": "Better Code, Better Experiences",
+  "experience_role": "Software Developer at Sifizsoft S.A",
+  "experience_period": "May, 2023 - Present",
+  "experience_resp_1": "Participated in the migration of the Enterprise Financial System...",
+  "experience_resp_2": "Developed complex features and performed automated testing...",
+  "experience_resp_3": "Programmed updates based on detailed design specifications...",
+  "experience_resp_4": "Worked independently and as an enthusiastic team member...",
+  "experience_resp_5": "Provided support and maintenance for incidents...",
+  "experience_resp_6": "Programmed new views and functionalities...",
   
-  "skills": {
-    "title": "My Skills",
-    "subtitle": "All for one and one for all",
-    "technical": {
-      "title": "Technical Skills",
-      "items": [
-        "Programming Languages: Javascript, C#",
-        "Frameworks: ASP.Net Core, Angular, Blazor",
-        "API Design and Development",
-        "Database: SQL Server, MySQL",
-        "Cloud Services: Azure, AWS",
-        "Version Control: Git, GitHub",
-        "Agile Methodologies: Scrum"
-      ]
-    },
-    "soft": {
-      "title": "Soft Skills",
-      "items": [
-        "Proactivity",
-        "Teamwork",
-        "Communication",
-        "Problem Solving",
-        "Adaptability",
-        "Time Management"
-      ]
-    }
-  },
+  "skills_title": "My Skills",
+  "skills_subtitle": "All for one and one for all",
+  "skills_technical_title": "Technical Skills",
+  "skills_technical_1": "Programming Languages: Javascript, C#",
+  "skills_technical_2": "Frameworks: ASP.Net Core, Angular, Blazor",
+  "skills_technical_3": "API Design and Development",
+  "skills_technical_4": "Database: SQL Server, MySQL",
+  "skills_technical_5": "Cloud Services: Azure, AWS",
+  "skills_technical_6": "Version Control: Git, GitHub",
+  "skills_technical_7": "Agile Methodologies: Scrum",
   
-  "portfolio": {
-    "title": "My Portfolio",
-    "subtitle": "Some Of My Distinguished Works",
-    "projects": [
-      {
-        "category": "Development",
-        "title": "Mobile app landing design & Services",
-        "image": "portfolio1.jpg"
-      },
-      {
-        "category": "Development",
-        "title": "Mobile app landing design & Services",
-        "image": "portfolio2.jpg"
-      },
-      {
-        "category": "Development",
-        "title": "Mobile app landing design & Services",
-        "image": "portfolio3.jpg"
-      },
-      {
-        "category": "Development",
-        "title": "Mobile app landing design & Services",
-        "image": "portfolio4.jpg"
-      }
-    ]
-  },
+  "skills_soft_title": "Soft Skills",
+  "skills_soft_1": "Proactivity",
+  "skills_soft_2": "Teamwork",
+  "skills_soft_3": "Communication",
+  "skills_soft_4": "Problem Solving",
+  "skills_soft_5": "Adaptability",
+  "skills_soft_6": "Time Management",
   
-  "contact": {
-    "title": "Contact Me",
-    "subtitle": "Let's Work Together",
-    "description": "Lorem Ipsum Is Simply Dummy Text Of The Printing And Typesetting Industry",
-    "location": "Holguín - Cuba",
-    "email": "vaglegra91@gmail.com",
-    "phone": "+53-54791418",
-    "form": {
-      "name": "Enter Your Name",
-      "email": "Enter Your Email",
-      "subject": "Enter Your Subject",
-      "message": "Enter Your Message",
-      "submit": "Submit"
-    }
-  },
+  "portfolio_title": "My Portfolio",
+  "portfolio_subtitle": "Some Of My Distinguished Works",
+  "portfolio_project_1_category": "Development",
+  "portfolio_project_1_title": "Mobile app landing design & Services",
+  "portfolio_project_2_category": "Development",
+  "portfolio_project_2_title": "Mobile app landing design & Services",
+  "portfolio_project_3_category": "Development",
+  "portfolio_project_3_title": "Mobile app landing design & Services",
+  "portfolio_project_4_category": "Development",
+  "portfolio_project_4_title": "Mobile app landing design & Services",
   
-  "footer": {
-    "copyright": "Developed by Victor Guilarte ©"
-  },
+  "certifications_title": "My Certifications",
+  "certifications_subtitle": "Enjoying the trip",
   
-  "accessibility": {
-    "theme_toggle": "Toggle theme",
-    "menu_toggle": "Toggle menu",
-    "back_to_top": "Back to top"
-  }
+  "contact_title": "Contact Me",
+  "contact_subtitle": "Let's Work Together",
+  "contact_description": "Lorem Ipsum Is Simply Dummy Text Of The Printing And Typesetting Industry",
+  "contact_form_name": "Name",
+  "contact_form_name_placeholder": "Enter Your Name",
+  "contact_form_email": "Email",
+  "contact_form_email_placeholder": "Enter Your Email",
+  "contact_form_subject": "Subject",
+  "contact_form_subject_placeholder": "Enter Your Subject",
+  "contact_form_message": "Message",
+  "contact_form_message_placeholder": "Enter Your Message",
+  "contact_form_submit": "Submit",
+  
+  "footer_copyright": "Developed by Victor Guilarte ©"
 }
